--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <td>2014-2016</td>
       </tr>
       <tr>
-        <td>Intern at Dangote</td>
+        <td>Intern at Dangote PLC</td>
         <td>2019</td>
       </tr>
       <tr>
@@ -48,10 +48,6 @@
           <tr>
             <td>Front End Development</td>
             <td>✨✨</td>
-      </tr>
-      <tr>
-        <td>Cooking</td>
-        <td>✨✨✨✨</td>
       </tr>
     </table>
     <h3></h3>
